@@ -363,10 +363,19 @@
       <id>printer/Gestetner-DSm615</id>
     </printer>
     <printer>
+      <id>printer/Gestetner-DSm616</id>
+    </printer>
+    <printer>
       <id>printer/Gestetner-DSm618</id>
     </printer>
     <printer>
       <id>printer/Gestetner-DSm618d</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm620</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm620d</id>
     </printer>
     <printer>
       <id>printer/Gestetner-DSm622</id>
@@ -388,6 +397,18 @@
     </printer>
     <printer>
       <id>printer/Gestetner-DSm675</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm725</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm730</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm735_735G</id>
+    </printer>
+    <printer>
+      <id>printer/Gestetner-DSm745_745G</id>
     </printer>
     <printer>
       <id>printer/Gestetner-F9199_9199nf</id>
@@ -873,6 +894,27 @@
       <id>printer/Infotec-IS_2215</id>
     </printer>
     <printer>
+      <id>printer/Infotec-IS_2216</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2220</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2220D</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2225</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2230</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2235</id>
+    </printer>
+    <printer>
+      <id>printer/Infotec-IS_2245</id>
+    </printer>
+    <printer>
       <id>printer/Kodak-DigiSource_9110</id>
       <!-- Kodak DigiSource 9110 -->
     </printer>
@@ -1116,10 +1158,19 @@
       <id>printer/Lanier-LD115</id>
     </printer>
     <printer>
+      <id>printer/Lanier-LD116</id>
+    </printer>
+    <printer>
       <id>printer/Lanier-LD118</id>
     </printer>
     <printer>
       <id>printer/Lanier-LD118d</id>
+    </printer>
+    <printer>
+      <id>printer/Lanier-LD120</id>
+    </printer>
+    <printer>
+      <id>printer/Lanier-LD120d</id>
     </printer>
     <printer>
       <id>printer/Lanier-LD122</id>
@@ -1155,13 +1206,25 @@
       <id>printer/Lanier-LD175</id>
     </printer>
     <printer>
+      <id>printer/Lanier-LD225</id>
+    </printer>
+    <printer>
       <id>printer/Lanier-LD228c</id>
+    </printer>
+    <printer>
+      <id>printer/Lanier-LD230</id>
     </printer>
     <printer>
       <id>printer/Lanier-LD232c</id>
     </printer>
     <printer>
+      <id>printer/Lanier-LD235</id>
+    </printer>
+    <printer>
       <id>printer/Lanier-LD238c</id>
+    </printer>
+    <printer>
+      <id>printer/Lanier-LD245</id>
     </printer>
     <printer>
       <id>printer/Lanier-LD328c</id>
@@ -1388,6 +1451,12 @@
       <id>printer/NRG-C7435n</id>
     </printer>
     <printer>
+      <id>printer/NRG-C7528n</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-C7535hdn</id>
+    </printer>
+    <printer>
       <id>printer/NRG-CC7417</id>
     </printer>
     <printer>
@@ -1439,10 +1508,19 @@
       <id>printer/NRG-DSm615</id>
     </printer>
     <printer>
+      <id>printer/NRG-DSm616</id>
+    </printer>
+    <printer>
       <id>printer/NRG-DSm618</id>
     </printer>
     <printer>
       <id>printer/NRG-DSm618d</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm620</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm620d</id>
     </printer>
     <printer>
       <id>printer/NRG-DSm622</id>
@@ -1467,6 +1545,18 @@
     </printer>
     <printer>
       <id>printer/NRG-DSm675</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm725</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm730</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm735</id>
+    </printer>
+    <printer>
+      <id>printer/NRG-DSm745</id>
     </printer>
     <printer>
       <id>printer/NRG-P7026</id>
@@ -1665,10 +1755,19 @@
       <id>printer/Ricoh-Aficio_2015</id>
     </printer>
     <printer>
+      <id>printer/Ricoh-Aficio_2016</id>
+    </printer>
+    <printer>
       <id>printer/Ricoh-Aficio_2018</id>
     </printer>
     <printer>
       <id>printer/Ricoh-Aficio_2018D</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_2020</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_2020D</id>
     </printer>
     <printer>
       <id>printer/Ricoh-Aficio_2022</id>
@@ -1714,6 +1813,18 @@
     </printer>
     <printer>
       <id>printer/Ricoh-Aficio_2238C</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_3025</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_3030</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_3035</id>
+    </printer>
+    <printer>
+      <id>printer/Ricoh-Aficio_3045</id>
     </printer>
     <printer>
       <id>printer/Ricoh-Aficio_3224C</id>
@@ -1945,6 +2056,27 @@
     </printer>
     <printer>
       <id>printer/Savin-4090</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8016</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8020</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8020d</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8025</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8030</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8035_8035g</id>
+    </printer>
+    <printer>
+      <id>printer/Savin-8045_8045g</id>
     </printer>
     <printer>
       <id>printer/Savin-C2408</id>
