@@ -1,3 +1,9 @@
+2005-11-02  George Liu <george.liu@ussj.ricoh.com>
+
+	* PPD/ Added 44 new Ricoh Family and OEM Postscript PPD files.
+        * printer/ Added 44 printer xml files for the new Postscript printer entries.
+        * driver/Postscript.xml Added 44 printer entries
+
 2005-10-31  George Liu <george.liu@ussj.ricoh.com>
 
 	* PPD/ Fixed a duplex bug and updated 136 PXL PPD files for Ricoh,
